add/remove watchList and cache in redis
