# src/main/java/com/ariat/app/entity/YearlyBound.java
@@ -4,12 +4,10 @@ import lombok.AllArgsConstructor;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 
-import java.util.List;
-
 @Data
 @NoArgsConstructor
 @AllArgsConstructor
-public class WatchlistResponse {
-    private List<WatchlistStockItem> stocks;
-    private Integer total;
+public class YearlyBound {
+    private double upperBound;
+    private double lowerBound;
 }
